--- a/vagrant/catalog/templates/home.html
+++ b/vagrant/catalog/templates/home.html
@@ -1,9 +1,11 @@
 <html>
 <body>
+<br>
+<p><a href="{{url_for('add_item', categories=categories)}}"> Add Item</a></p>
 <h1>Categories</h1>
 {% for i in categories %}
 <div>
-<p>{{i.title}}</p>
+<p><a href="{{url_for('list_items', category_id=i.id)}}"> {{i.title}}</a></p>
 </div>
 {% endfor %}
 </body>
