--- a/vagrant/catalog/templates/items.html
+++ b/vagrant/catalog/templates/items.html
@@ -3,7 +3,7 @@
 <h1>Items for {{category_name}}</h1>
 {% for i in items %}
 <div>
-<p>{{i.title}}: {{i.description}}</p>
+<p><a href="{{url_for('get_item', item_id=i.id)}}"> {{i.title}}</a></p>
 </div>
 {% endfor %}
 </body>
