--- a/vagrant/catalog/templates/item_description.html
+++ b/vagrant/catalog/templates/item_description.html
@@ -5,6 +5,7 @@
 <p>{{item.description}}</p>
 </div>
 <br>
+<p><a href="{{url_for('edit_item', item_id=item.id)}}"> Edit Item</a></p>
 <p><a href="{{url_for('delete_item', item_id=item.id)}}"> Delete Item</a></p>
 </body>
 </html>
