--- a/vagrant/catalog/templates/home.html
+++ b/vagrant/catalog/templates/home.html
@@ -8,5 +8,13 @@
 <p><a href="{{url_for('list_items', category_id=i.id)}}"> {{i.title}}</a></p>
 </div>
 {% endfor %}
+
+<h2>Latest Items</h2>
+{% for i in latest %}
+<div>
+<p><a href="{{url_for('get_item', item_id=i.id)}}"> {{i.title}}</a></p>
+</div>
+{% endfor %}
+
 </body>
 </html>
