--- a/vagrant/catalog/templates/home.html
+++ b/vagrant/catalog/templates/home.html
@@ -12,7 +12,7 @@
 <h2>Latest Items</h2>
 {% for i in latest %}
 <div>
-<p><a href="{{url_for('get_item', item_id=i.id)}}"> {{i.title}}</a></p>
+<p><a href="{{url_for('get_item', category_id=i.categoryId, item_id=i.id)}}"> {{i.title}}</a></p>
 </div>
 {% endfor %}
 
