--- a/vagrant/catalog/templates/item_delete.html
+++ b/vagrant/catalog/templates/item_delete.html
@@ -5,9 +5,9 @@
 <p>Are you sure you want to delete this item?</p>
 </div>
 <br>
-<form action="{{url_for('delete_item', item_id=item.id)}}" method = 'POST'>
+<form action="{{url_for('delete_item', item_id=item.id, category_id=item.categoryId)}}" method = 'POST'>
         <input type='submit', value = 'Yes'>
         </form>
-        <a href = '{{url_for('get_item', item_id=item.id)}}'> Nah, nevermind </a>
+        <a href = '{{url_for('get_item', item_id=item.id, category_id=item.categoryId)}}'> Nah, nevermind </a>
 </body>
 </html>
