--- a/vagrant/catalog/templates/home.html
+++ b/vagrant/catalog/templates/home.html
@@ -5,14 +5,14 @@
 <h1>Categories</h1>
 {% for i in categories %}
 <div>
-<p><a href="{{url_for('list_items', category_id=i.id)}}"> {{i.title}}</a></p>
+<p><a href="{{url_for('list_items', category_name=i.name)}}"> {{i.name}}</a></p>
 </div>
 {% endfor %}
 
 <h2>Latest Items</h2>
 {% for i in latest %}
 <div>
-<p><a href="{{url_for('get_item', category_id=i.categoryId, item_id=i.id)}}"> {{i.title}}</a></p>
+<p><a href="{{url_for('get_item', category_name=i.categoryName, item_name=i.name)}}"> {{i.name}} ({{ i.categoryName }})</a></p>
 </div>
 {% endfor %}
 
