--- a/vagrant/catalog/templates/item_delete.html
+++ b/vagrant/catalog/templates/item_delete.html
@@ -1,13 +1,13 @@
 <html>
 <body>
-<h1>Delete Item {{item.title}}</h1>
+<h1>Delete Item {{item.name}}</h1>
 <div>
 <p>Are you sure you want to delete this item?</p>
 </div>
 <br>
-<form action="{{url_for('delete_item', item_id=item.id, category_id=item.categoryId)}}" method = 'POST'>
+<form action="{{url_for('delete_item', item_name=item.name, category_name=item.categoryName)}}" method = 'POST'>
         <input type='submit', value = 'Yes'>
         </form>
-        <a href = '{{url_for('get_item', item_id=item.id, category_id=item.categoryId)}}'> Nah, nevermind </a>
+        <a href = '{{url_for('get_item', item_name=item.name, category_name=item.categoryName)}}'> Nah, nevermind </a>
 </body>
 </html>
