--- a/vagrant/catalog/templates/item_description.html
+++ b/vagrant/catalog/templates/item_description.html
@@ -1,11 +1,11 @@
 <html>
 <body>
-<h1>Details of {{item.title}}</h1>
+<h1>Details of {{item.name}}</h1>
 <div>
 <p>{{item.description}}</p>
 </div>
 <br>
-<p><a href="{{url_for('edit_item', item_id=item.id, category_id=item.categoryId)}}"> Edit Item</a></p>
-<p><a href="{{url_for('delete_item', item_id=item.id, category_id=item.categoryId)}}"> Delete Item</a></p>
+<p><a href="{{url_for('edit_item', item_name=item.name, category_name=item.categoryName)}}"> Edit Item</a></p>
+<p><a href="{{url_for('delete_item', item_name=item.name, category_name=item.categoryName)}}"> Delete Item</a></p>
 </body>
 </html>
