--- a/vagrant/catalog/templates/item_edit.html
+++ b/vagrant/catalog/templates/item_edit.html
@@ -6,22 +6,22 @@
 
 <h1> Edit Item </h1>
 
-<form action="{{ url_for('edit_item', item_id=item.id, category_id=item.categoryId) }}" method = 'post'>
+<form action="{{ url_for('edit_item', item_name=item.name, category_name=item.categoryName) }}" method = 'post'>
 
 <dl>
       <dt>Name:</dt>
-      <dd><input type ='text' size='30' name='name' placeholder='{{item.title}}'></dd>
+      <dd><input type ='text' size='30' name='name' placeholder='{{item.name}}'></dd>
       <dt>Description:</dt>
             <dd><textarea name = 'description' rows='5' cols='40' placeholder='{{item.description}}'></textarea></dd>
       <dt>Category:</dt>
       {% for c in categories %}
-            <dd><input type ='radio' name='category' placeholder='{{item.categoryId}}' value='{{c.id}}'>{{c.title}}</dd>
+            <dd><input type ='radio' name='category' placeholder='{{item.categoryName}}' value='{{c.name}}'>{{c.name}}</dd>
       {% endfor %}
 </dl>
 
 <input type='submit' value='Edit'>
 
-<a href = '{{url_for('get_item', item_id = item.id, category_id=item.categoryId)}}'> Cancel </a>
+<a href = '{{url_for('get_item', item_name = item.name, category_name=item.categoryName)}}'> Cancel </a>
 </form>
 </body>
 </html>
