--- a/vagrant/catalog/templates/new_item.html
+++ b/vagrant/catalog/templates/new_item.html
@@ -5,12 +5,12 @@
 <form action="{{ url_for('add_item')}}" method = 'post'>
 <dl>
 	<dt>Name:</dt>
-        <dd><input type ='text' size='30' name='title' required></dd>
+        <dd><input type ='text' size='30' name='name' required></dd>
     <dt>Description:</dt>
         <dd><textarea name = 'description' rows='5' cols='40' required></textarea></dd>
     <dt>Category:</dt>
     {% for c in categories %}
-        <dd><input type ='radio' name='category' value='{{c.id}}'>{{c.title}}</dd>
+        <dd><input type ='radio' name='category' value='{{c.name}}'>{{c.name}}</dd>
     {% endfor %}
 </dl>
 <input type='submit' value='Create'>
