--- a/vagrant/catalog/templates/home.html
+++ b/vagrant/catalog/templates/home.html
@@ -1,6 +1,12 @@
 <html>
 <body>
 <br>
+{% if logged %}
+<p><a href="{{url_for('gdisconnect')}}"> Logout</a></p>
+{% else %}
+<p><a href="{{url_for('login')}}"> Login</a></p>
+{% endif %}
+<br>
 <p><a href="{{url_for('add_item', categories=categories)}}"> Add Item</a></p>
 <h1>Categories</h1>
 {% for i in categories %}
