--- a/vagrant/catalog/templates/home.html
+++ b/vagrant/catalog/templates/home.html
@@ -1,13 +1,15 @@
 <html>
 <body>
 <br>
-{% if logged %}
+{% if session.logged_in %}
 <p><a href="{{url_for('gdisconnect')}}"> Logout</a></p>
 {% else %}
 <p><a href="{{url_for('login')}}"> Login</a></p>
 {% endif %}
 <br>
+{% if session.logged_in %}
 <p><a href="{{url_for('add_item', categories=categories)}}"> Add Item</a></p>
+{% endif %}
 <h1>Categories</h1>
 {% for i in categories %}
 <div>
