--- a/vagrant/catalog/templates/item_description.html
+++ b/vagrant/catalog/templates/item_description.html
@@ -5,8 +5,10 @@
 <p>{{item.description}}</p>
 </div>
 <br>
+{% if session.logged_in and session['email'] == item.created_by  %}
 <p><a href="{{url_for('edit_item', item_name=item.name, category_name=item.categoryName)}}"> Edit Item</a></p>
-
 <p><a href="{{url_for('delete_item', item_name=item.name, category_name=item.categoryName)}}"> Delete Item</a></p>
+{% endif %}
+
 </body>
 </html>
