--- a/vagrant/catalog/templates/home.html
+++ b/vagrant/catalog/templates/home.html
@@ -1,11 +1,5 @@
-<html>
-<body>
-<br>
-{% if session.logged_in %}
-<p><a href="{{url_for('gdisconnect')}}"> Logout</a></p>
-{% else %}
-<p><a href="{{url_for('login')}}"> Login</a></p>
-{% endif %}
+{% extends "layout.html" %}
+{% block body %}
 <br>
 {% if session.logged_in %}
 <p><a href="{{url_for('add_item', categories=categories)}}"> Add Item</a></p>
@@ -23,6 +17,4 @@
 <p><a href="{{url_for('get_item', category_name=i.categoryName, item_name=i.name)}}"> {{i.name}} ({{ i.categoryName }})</a></p>
 </div>
 {% endfor %}
-
-</body>
-</html>
+{% endblock %}
