--- a/vagrant/catalog/templates/item_delete.html
+++ b/vagrant/catalog/templates/item_delete.html
@@ -1,5 +1,5 @@
-<html>
-<body>
+{% extends "layout.html" %}
+{% block body %}
 <h1>Delete Item {{item.name}}</h1>
 <div>
 <p>Are you sure you want to delete this item?</p>
@@ -9,5 +9,4 @@
         <input type='submit', value = 'Yes'>
         </form>
         <a href = '{{url_for('get_item', item_name=item.name, category_name=item.categoryName)}}'> Nah, nevermind </a>
-</body>
-</html>
+{% endblock %}
