--- a/vagrant/catalog/templates/item_edit.html
+++ b/vagrant/catalog/templates/item_edit.html
@@ -1,4 +1,5 @@
-<html>
+{% extends "layout.html" %}
+{% block body %}
 <head>
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 	</head>
@@ -23,5 +24,4 @@
 
 <a href = '{{url_for('get_item', item_name = item.name, category_name=item.categoryName)}}'> Cancel </a>
 </form>
-</body>
-</html>
+{% endblock %}
