--- a/vagrant/catalog/templates/new_item.html
+++ b/vagrant/catalog/templates/new_item.html
@@ -1,20 +1,21 @@
-<html>
-<body>
+{% extends "layout.html" %}
+{% block body %}
 <h1>New Item</h1>
 <div>
-<form action="{{ url_for('add_item')}}" method = 'post'>
+<form action="{{ url_for('add_item')}}" method = 'post' class=add-entry>
 <dl>
 	<dt>Name:</dt>
         <dd><input type ='text' size='30' name='name' required></dd>
     <dt>Description:</dt>
         <dd><textarea name = 'description' rows='5' cols='40' required></textarea></dd>
     <dt>Category:</dt>
+    <select>
     {% for c in categories %}
-        <dd><input type ='radio' name='category' value='{{c.name}}'>{{c.name}}</dd>
+        <option  name='category' value='{{c.name}}'>{{c.name}}</option>
     {% endfor %}
+    </select>
 </dl>
 <input type='submit' value='Create'>
 </form>
 </div>
-</body>
-</html>
+{% endblock %}
