--- a/vagrant/catalog/templates/layout.html
+++ b/vagrant/catalog/templates/layout.html
@@ -1,13 +1,14 @@
 <title>Item Catalog</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <div class=page>
-  <h1>Flaskr</h1>
-  <div class=metanav>
-  {% if not session.logged_in %}
-    <a href="{{ url_for('login') }}">log in</a>
-  {% else %}
-    <a href="{{ url_for('logout') }}">log out</a>
-  {% endif %}
-  </div>
-  {% block body %}{% endblock %}
+  <ul>
+      <li><a href="{{ url_for('home') }}">Home</a></li>
+      {% if not session.logged_in %}
+      <li style="float:right"><a href="{{ url_for('login') }}">Log in</a></li>
+      {% else %}
+      <li style="float:right"><a href="{{ url_for('logout') }}">Log out</a></li>
+      {% endif %}
+</ul>
+<br>
+{% block body %}{% endblock %}
 </div>
