--- a/vagrant/catalog/static/style.css
+++ b/vagrant/catalog/static/style.css
@@ -1,10 +1,62 @@
+* {
+	font-family: "Helvetica Neue Bold", Roboto, Helvetica, Arial, sans-serif;
+	font-weight: 700;
+}
 body            { font-family: sans-serif; background: #eee; }
-a, h1, h2       { color: #377ba8; }
+a               { color: #454ea8; }
 h1, h2          { font-family: 'Georgia', serif; margin: 0; }
-h1              { border-bottom: 2px solid #eee; }
-h2              { font-size: 1.2em; }
+h1              { font-size: 1.3em solid; color: #f47142 }
 
-.page           { margin: 2em auto; width: 35em; border: 5px solid #ccc;
+
+.categories-list {
+    width: 35%;
+    float: left;
+    height: 300px;
+    border-right: 2px solid gray;
+}
+.items-list {
+    margin-left:1em;
+    float: left;
+    height: 300px;
+}
+.clear {
+    clear: both;
+}
+
+a {
+    text-decoration: none !important;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #260f9b;
+}
+
+li {
+    float: left;
+}
+
+li:last-child {
+    border-right: none;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color: #111;
+}
+
+.page           { margin: 2em auto; width: 45em; border: 5px solid #ccc;
                   padding: 0.8em; background: white; }
 .entries        { list-style: none; margin: 0; padding: 0; }
 .entries li     { margin: 0.8em 1.2em; }
