--- a/vagrant/catalog/templates/items.html
+++ b/vagrant/catalog/templates/items.html
@@ -1,9 +1,25 @@
 {% extends "layout.html" %}
 {% block body %}
-<h1>Items for {{category_name}}</h1>
-{% for i in items %}
-<div>
-<p><a href="{{url_for('get_item', item_name=i.name, category_name=i.categoryName)}}"> {{i.name}}</a></p>
+<div class=main-grid>
+    <div class=categories-list>
+        <h1>Categories</h1>
+        {% for i in categories %}
+        <div class=category>
+            <p><a href="{{url_for('list_items', category_name=i.name)}}"> {{i.name}}</a></p>
+        </div>
+        {% endfor %}
+    </div>
+    <div class=items-list>
+        {% if session.logged_in %}
+        <a href="{{url_for('add_item', categories=categories)}}"> Add Item</a><br>
+        {% endif %}
+        <h1>{{category_name}} Items ({{amount}})</h1>
+            {% for i in items %}
+            <div>
+            <p><a href="{{url_for('get_item', item_name=i.name, category_name=i.categoryName)}}"> {{i.name}}</a></p>
+            </div>
+        {% endfor %}
+    </div>
+    <div class="clear"></div>
 </div>
-{% endfor %}
 {% endblock %}
