--- a/vagrant/catalog/templates/item_edit.html
+++ b/vagrant/catalog/templates/item_edit.html
@@ -1,10 +1,5 @@
 {% extends "layout.html" %}
 {% block body %}
-<head>
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
-	</head>
-	<body>
-
 <h1> Edit Item </h1>
 
 <form action="{{ url_for('edit_item', item_name=item.name, category_name=item.categoryName) }}" method = 'post'>
@@ -15,13 +10,15 @@
       <dt>Description:</dt>
             <dd><textarea name = 'description' rows='5' cols='40' placeholder='{{item.description}}'></textarea></dd>
       <dt>Category:</dt>
+      <select name='category'>
       {% for c in categories %}
-            <dd><input type ='radio' name='category' placeholder='{{item.categoryName}}' value='{{c.name}}'>{{c.name}}</dd>
+            <option {% if c.name == item.category_name %} selected {% endif %} value='{{c.name}}'>{{c.name}}</option>
       {% endfor %}
+      </select>
 </dl>
 
 <input type='submit' value='Edit'>
-
-<a href = '{{url_for('get_item', item_name = item.name, category_name=item.categoryName)}}'> Cancel </a>
+<br>
 </form>
+<a href = '{{url_for('get_item', item_name=item.name, category_name=item.categoryName)}}'> Cancel </a>
 {% endblock %}
