--- a/vagrant/catalog/templates/home.html
+++ b/vagrant/catalog/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-<div class=main-grid>
+<div class=main-grid,clear>
     <div class=categories-list>
         <h1>Categories</h1>
         {% for i in categories %}
@@ -17,9 +17,10 @@
     <h1>Latest Items</h1>
     {% for i in latest %}
     <div class=item>
-    <p><a href="{{url_for('get_item', category_name=i.categoryName, item_name=i.name)}}"> {{i.name}} ({{ i.categoryName }})</a></p>
+    <p><a href="{{url_for('get_item', category_name=i.categoryName, item_name=i.name)}}"> {{i.name}}</a>
+       <a class=category-link href="{{url_for('list_items', category_name=i.categoryName)}}"> ({{ i.categoryName }})</a> </p>
     </div>
-{% endfor %}
+    {% endfor %}
 </div>
 <div class="clear"></div>
 </div>
