--- a/vagrant/catalog/templates/layout.html
+++ b/vagrant/catalog/templates/layout.html
@@ -10,5 +10,8 @@
       {% endif %}
 </ul>
 <br>
+{% for message in get_flashed_messages() %}
+  <div class=flash>{{ message }}</div>
+{% endfor %}
 {% block body %}{% endblock %}
 </div>
